# opencog-codespace-demo

./: .dockerignore  .editorconfig  .env.example  .git-blame-ignore-revs  .gitattributes  .gitignore  .pre-commit-config.yaml  .yamllint  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  Dockerfile  Makefile  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  TROUBLESHOOTING.md  analyze-logs.sh  benchmark.scm  cogcli-completion.bash  cogcli.py  demo.scm  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  docker-entrypoint.sh  docker-healthcheck.sh  health-report.sh  init-cogserver.scm  loadtest.py  prelude.scm  pyproject.toml  repl.sh  run-all-demos.sh  start-cogserver.sh  stress-progressive.sh  test-demos.sh  test-integration.sh
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml  labeler.yml  release-drafter.yml
demo/: cogserver-client.ts  comprehensive-demo.scm  evaluation-demo.scm  python-demo.ipynb  rest-api.scm  stress-test.scm  truth-values.scm  values-api.scm
docs/: api.md  architecture.md  atom-types-reference.md  atomese-primer.md  backup-restore.md  best-practices.md  build-from-source.md  docker-deployment.md  ecosystem.md  faq.md  getting-involved.md  getting-started.md  glossary.md  history.md  integrations.md  knowledge-patterns.md  migration-guide.md  neuro-symbolic.md  performance-guide.md  security-hardening.md  tunneling.md  visualizer-pages.md  vocabulary.md  wiki-index.md
scripts/: atom-stats.py  benchmark-comparison.scm  check-ports.sh  check-requirements.sh  demo-timing.py  log-parser.py  (+4 more)
(+40 files in other folders)
