[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "opencog-cogcli"
version = "1.0.0"
description = "CLI tool and demo scripts for the OpenCog CogServer"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
keywords = ["opencog", "atomspace", "cogserver"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "websockets>=10",
]

[project.urls]
Repository = "https://github.com/NullLabTests/opencog-codespace-demo"

[tool.setuptools.packages.find]
where = ["."]
include = ["demo*", "docs*"]
